<resources>
    <string name="app_name">Green Thumb</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to Garden Partner-->

    <string name="garden_name">Name</string>
    <string name="add_garden_hint">Name Your Garden</string>
    <string name="garden_address">Location</string>
    <string name="garden_owner">Owner</string>
    <string name="garden_contact">Contact At</string>
    <string name="address_hint">Provide Garden Address</string>
    <string name="garden_image">Capture Image Of Your Garden</string>
    <string name="err_msg_gname">Enter your Garden Name</string>
    <string name="err_msg_address">Enter valid address of your Garden</string>
    <string name="err_msg_noGImage">Please take a picture of your Garden</string>
    <string name="galbum_name">GardenAlbum</string>

    <string name="garden_overview">Garden Overview</string>
    <string name="request_membership">Request Membership</string>
    <string name="cancel_membership">Cancel Membership</string>
    <string name="view_requests">View Requests</string>
    <string name="update_info">Update Info</string>
    <string name="msg_membership">Membership Request Sent to Owner</string>

    <!--Strings for My Plant-->
    <string name="Err_Plant_Name">Please, enter your plant name</string>
    <string name="Err_Kit_Num">Please, enter the kit number</string>
    <string name="Err_Not_Time">Please, enter notification time</string>
    <string name="Err_Plant_Image">Please, add an image of your plant</string>
    <string name="title_activity_task_update">Task Update Activity</string>
     <string name="Err_Email">Please, enter a valid email address</string>
    <string name = "Err_Password">Please, enter the password</string>


    <!--Strings for image description-->
    <string name="subscription_key">4d4b114f3e0f47469ad6fbb6a0582fda</string>
    <string name="add_subscription_key_tip_title">Computer Vision</string>
    <string name="add_subscription_key_tip">Please put your subscription key to source file \"app/res/values/strings.xml\" to enable Vision API calls.</string>

    <string name="title_activity_analyze">Analyze Image</string>
    <string name="title_activity_analyze_domain">Analyze Image In Domain</string>
    <string name="title_activity_describe">Describe Image</string>
    <string name="title_activity_recognize">Recognize Text</string>
    <string name="title_activity_handwriting_recognize">Recognize Handwriting Text</string>
    <string name="title_activity_thumbnail">Thumbnail Image</string>

    <!-- Select image activity -->
    <string name="select_an_image">Select an Image</string>
    <string name="take_photo">Take a Photo</string>
    <string name="select_image_in_album">From Gallery</string>
</resources>
