<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_garden"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pervasive.iu.com.greenthumb.GardenPartner.RegisterGarden">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:text="@string/garden_name"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>
            <EditText
                android:id="@+id/gardenname"
                android:hint="@string/add_garden_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:text="@string/garden_address"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="0.01" />
            <EditText
                android:id="@+id/gardenaddress"
                android:hint="@string/address_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10" />
        </LinearLayout>



        <Button
            android:text="Register"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:layout_gravity="center"
            android:onClick="onRegister" />

    </LinearLayout>
</RelativeLayout>
