<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_garden_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pervasive.iu.com.greenthumb.GardenPartner.GardenOverview">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:weightSum="1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="183dp"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="@string/garden_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5" />

                <EditText

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/g_name"
                     />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/garden_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7" />

                <EditText

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/g_address" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/garden_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10" />

                <EditText

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/g_owner" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/garden_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12" />

                <EditText

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/g_contactNumber" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="198dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="195dp"
                app:srcCompat="@drawable/ic_default_plant"
                android:id="@+id/gardenOImage"
                android:visibility="invisible"
                android:scaleType="center"/>



        </LinearLayout>

        <Button
            android:text="@string/request_membership"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:id="@+id/req_memship"
            android:visibility="gone" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            >

            <Button
                android:text="@string/update_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/update_info"
                android:background="@color/colorPrimaryDark"
                android:onClick="updateInfo"
                android:visibility="invisible"
                android:textColor="@android:color/white"
                android:layout_marginBottom="10dp"/>

            <Button
                android:text="@string/view_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:id="@+id/view_requests"
                android:visibility="invisible"
                android:textColor="@android:color/white"
                />

       </LinearLayout>



    </LinearLayout>

</ScrollView>

</RelativeLayout>
